<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/ConversionFullScreen">

    <View
        android:id="@+id/status_place_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/translucent_status_height" />

    <ImageView
        android:id="@+id/conversion_cloud"
        style="@style/ConversionCloud" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/conversion_title"
        style="@style/ConversionText.Title"
        android:layout_marginTop="12dp"
        android:text="@string/conversion_title" />

    <View
        android:id="@+id/conversion_divider"
        style="@style/ConversionDivider" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/conversion_plan"
        style="@style/ConversionText.Plan"
        android:text="@string/tier_plus" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/conversion_price"
        style="@style/ConversionText.Price"
        android:layout_marginBottom="12dp" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/conversion_description"
        style="@style/ConversionText.Details"
        android:text="@string/conversion_description" />

    <com.soundcloud.android.view.LoadingButton
        android:id="@+id/conversion_buy"
        style="@style/ConversionButton"
        android:layout_marginTop="24dp"
        app:loadingText="@string/conversion_buy_loading"
        app:actionText="@string/conversion_buy_no_trial"
        app:retryText="@string/conversion_buy_retry" />

    <com.soundcloud.android.view.CustomFontButton
        android:id="@+id/conversion_more_products"
        style="@style/ConversionButton.More"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:layout_marginBottom="20dp">

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/conversion_restrictions"
            style="@style/ConversionText.Restrictions"
            android:layout_gravity="center"
            android:text="@string/conversion_restrictions" />
    </FrameLayout>

</LinearLayout>
