<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collections_playlists_options_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textStyle="normal"
        android:text="@string/collections_options_header_filters"
        android:textColor="@color/collections_options_dialog_header"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/horizontal_spacer">

        <ToggleButton
            android:id="@+id/show_posts"
            style="@style/Collections.OptionsToggle"
            android:textOff="@string/collections_options_toggle_created"
            android:textOn="@string/collections_options_toggle_created" />

        <ToggleButton
            android:id="@+id/show_likes"
            style="@style/Collections.OptionsToggle"
            android:textOff="@string/collections_options_toggle_likes"
            android:textOn="@string/collections_options_toggle_likes" />

    </LinearLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/collections_options_header_sorting"
        android:textColor="@color/collections_options_dialog_header"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/sort_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/sort_by_creation_date">

        <RadioButton
            android:id="@+id/sort_by_creation_date"
            android:text="@string/collections_options_dialog_sort_by_creation"
            style="@style/Collections.RadioButton" />

        <RadioButton
            android:id="@+id/sort_by_title"
            android:text="@string/collections_options_dialog_sort_by_title"
            style="@style/Collections.RadioButton" />

    </RadioGroup>

</LinearLayout>
