<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/animation_holder"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="@dimen/tour_bottom_buttons_height"
              android:background="@color/transparent"
              android:padding="10dp">

    <Button android:id="@+id/facebook_btn"
            style="@style/Tour.FacebookButton"
            android:text="@string/authentication_log_in_with_facebook"

            android:layout_marginRight="10dp">
        <requestFocus/>
    </Button>

    <Button android:id="@+id/signup_btn"
            style="@style/Tour.Button"
            android:text="@string/authentication_sign_up"

            android:layout_marginRight="10dp"/>

    <Button android:id="@+id/login_btn"
            style="@style/Tour.Button"
            android:text="@string/authentication_log_in"/>
</LinearLayout>
