<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/stations_onboarding_stream_notification_list_item">

    <TextView
        android:id="@+id/title"
        style="@style/OnboardingListItemNotification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stations_onboarding_stream_title" />

    <TextView
        android:id="@+id/description"
        style="@style/OnboardingListItemNotification.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stations_onboarding_stream_description" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/close_button"
        style="@style/OnboardingListItemNotificationCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_got_it" />

</merge>