<LinearLayout style="@style/ListItemNotificationLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/friends"
        style="@style/FacebookInvitesFriends">

        <com.soundcloud.android.view.CircularBorderImageView
            android:id="@+id/friend_1"
            style="@style/FacebookInvitesFriendImage" />

        <com.soundcloud.android.view.CircularBorderImageView
            android:id="@+id/friend_2"
            style="@style/FacebookInvitesFriendImageOverlap" />

        <com.soundcloud.android.view.CircularBorderImageView
            android:id="@+id/friend_3"
            style="@style/FacebookInvitesFriendImageOverlap" />
    </LinearLayout>

    <TextView
        android:id="@+id/facebook_invite_text"
        style="@style/ListItemNotificationTitle"
        android:text="@string/facebook_invites_title" />

    <TextView
        android:id="@+id/facebook_invite_introduction_text"
        style="@style/ListItemNotificationDescription"
        android:text="@string/facebook_invites_description" />

    <com.soundcloud.android.playback.ui.view.RoundedColorButton
        android:id="@+id/invite_button"
        style="@style/ListItemNotificationButton"
        android:text="@string/facebook_invites_button" />
</LinearLayout>
