<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View style="@style/Divider.Background" />

    <LinearLayout style="@style/OnboardingListItemNotificationLayout">

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/title"
            style="@style/OnboardingListItemNotification.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections_onboarding_title" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/description"
            style="@style/OnboardingListItemNotification.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections_onboarding_description" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/close_button"
            style="@style/OnboardingListItemNotificationCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_got_it" />
    </LinearLayout>

</LinearLayout>
