<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/OnboardingListItemNotificationLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/page_background"
        android:clickable="false"
        android:focusable="false" />

    <View style="@style/Divider.Horizontal" />

    <TextView
        android:id="@+id/title"
        style="@style/OnboardingListItemNotification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stations_onboarding_stream_title" />

    <TextView
        android:id="@+id/description"
        style="@style/OnboardingListItemNotification.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stations_onboarding_stream_description" />

    <TextView
        android:id="@+id/close_button"
        style="@style/OnboardingListItemNotificationCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_got_it" />

    <View style="@style/Divider.Horizontal" />
</LinearLayout>
